# plnq

./: .gitignore  Dockerfile  README.md  docker_build  docker_run  index.html  new_quiz.rb  paper.bib  paper.md  plnq.py  pyproject.toml
examples/: cast_return_value.ipynb  float_with_tolerance.ipynb  ignore_blocks.ipynb  match_with_regex.ipynb  mutator_function.ipynb  pass_through.ipynb  simple_example_loop_hw.ipynb  simple_example_loop_hw.safe.ipynb
examples/workspace_with_data_files/: canada.txt  europe_capitals.txt  workspace_with_data_files.ipynb
foobar/: info.json  question.html
mock_pl/: code_feedback.py  pl_helpers.py  pl_unit_test.py
plnq/: plnq.py
plnq/answer/: answer.py
plnq/quiz_template/tests/: answer  test.py
quiz_template/: info.json  question.html  server.py
quiz_template/tests/: answer.py  test.py
quiz_template/workspace/: learning_target.ipynb
test/: run_regression_tests.py  run_tests  run_tests.py
test/regression_tests/input/: cast_return_value.ipynb  float_with_tolerance.ipynb  ignore_blocks.ipynb  mutator_function.ipynb  pass_through.ipynb  workspace_with_data_files  (+1 more)
test/system_tests/: command_line_test.py  system_test_base.py  test_case_verification_test.py  test_command_line.py  test_suite_test.py  test_test_case_verification_test.py
test/unit_tests/: helper_tests.py  test_answer.py  test_answer_constructor_string.py  test_answer_make.py  test_autograde_verify.py  test_autograde_verify_integration.py  test_float_answer.py  test_helper_functions.py  test_helpers.py  test_inline_answer.py  test_plnq_test.py  test_re_answer.py
(+48 files in other folders)
